--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto, ad.</h1>
+    <ul>
+        <li>Home</li> 
+        <li>About us</li>        
+    </ul>
 </body>
 </html>
